[project]
name = "online-dsp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fujii-yjc", email = "fujii.koshi.2027@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "jupyterlab>=4.5.9",
    "matplotlib>=3.9.4",
]

[project.scripts]
online-dsp = "online_dsp:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
